update task endpoint with query param
